oanh update code lọc sản phẩm theo giá

--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -121,8 +121,7 @@
                             mãi</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a th:class="|nav-link page ${active=='about' ?'active':''}|" href="javascript:void(0)">Liên
-                            hệ</a>
+                        <a th:class="|nav-link page ${active=='policy' ?'active':''}|" href="/policy">Chính sách</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
