--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/discountProduct.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/discountProduct.html
@@ -1,9 +1,9 @@
-<h4 class="fw-semibold py-3 mb-4"> Danh sách sản phẩm được giảm [(${discount.getValue()})]%</h4>
+<h4 class="fw-semibold py-3 mb-4"> Danh sách sản phẩm áp dụng mã [(${discount.code})]</h4>
 <div class="row justify-content-end me-4">
     <!-- Nội dung của menu item -->
 </div>
 <form class="justify-content-end me-4">
-    <label>Thêm sản phẩm giảm giá:</label>
+    <label class="form-label">Thêm sản phẩm giảm giá:</label>
     <input type="text" class="form-control" th:name="keyword"
            th:value="${param.keyword}" placeholder="Tìm theo SKU sản phẩm">
 </form>
