--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -230,7 +230,7 @@
                                                     </option>
                                                 </select>
                                                 <span class="text-danger"><a class="text-danger fw-bold"
-                                                                             href="/login">Đăng ký</a> tài khoản để có thể nhận voucher ưu đãi của của hàng</span>
+                                                                             href="/login">Đăng ký</a> tài khoản để có thể nhận voucher ưu đãi của cửa hàng</span>
                                             </div>
                                         </div>
                                         <div class="mb-3 table-responsive">
@@ -289,10 +289,10 @@
                                         </div>
                                         <hr>
                                         <div class="row justify-content-center">
-                                            <span class="col fs-6">Tạm tính: </span>
+                                            <span class="col fs-5">Tạm tính: </span>
                                             <span class="col text-black text-end">
                                                 <span th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} đ|"
-                                                      class="total-pro fs-5" name="totalPrice"></span>
+                                                      class="total-pro fs-4" name="totalPrice"></span>
                                             </span>
                                         </div>
                                         <div class="row justify-content-center" id="voucher-info" hidden="hidden">
