--- a/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pro_cart.html
@@ -122,7 +122,7 @@
                                                     <div class="buttons_added" th:id="${item.product.id}">
                                                         <input class="minus is-form" type="submit"
                                                                value="-">
-                                                        <input aria-label="quantity" class="input-qty" max="10" min="0"
+                                                        <input aria-label="quantity" class="input-qty" max="11" min="0"
                                                                name="qty"
                                                                type="number"
                                                                th:value="${item.quantity}">
@@ -153,7 +153,8 @@
                                 <div class="text-end">
                                     <div class="mb-3">
                                     <span class="fs-4 text-danger"> Tổng tiền:
-                                              <span class="total-pro" th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} (VNĐ)|"></span>
+                                              <span class="total-pro"
+                                                    th:text="|${#numbers.formatDecimal(total,0,'COMMA',0,'POINT')} (VNĐ)|"></span>
                                     </span></div>
                                     <div>
                                         <a href="/" type="" class="btn btn-lg btn-outline-primary">Quay
@@ -170,7 +171,7 @@
                 </section>
             </div>
         </div>
-<!--        <div class="col-lg-3">-->
+        <!--        <div class="col-lg-3">-->
         <!--            <div class="card">-->
         <!--                <div class="card-body">-->
         <!--                    <div>-->
@@ -283,6 +284,23 @@
         Toast.fire({
             icon: "error",
             title: "Số lượng sản phẩm phải lớn hơn 0!"
+        });
+    }
+    if (document.getElementById("message").textContent == 'qua10') {
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.onmouseenter = Swal.stopTimer;
+                toast.onmouseleave = Swal.resumeTimer;
+            }
+        });
+        Toast.fire({
+            icon: "error",
+            title: "Số lượng mua tối đa là 10!"
         });
     }
     const plus = document.querySelectorAll(".plus")
