oanh sửa lỗi giỏ hàng khách đăng nhập sau khi xóa, validate cập nhật sản phẩm

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/list_product.html
@@ -111,7 +111,7 @@
                                        data-bs-target="#modalProduct" href="javascript:void(0);"
                                        th:value="${product.id}"><i
                                             class="bx bx-show-alt me-1"></i> Thông tin</a>
-                                    <a class="dropdown-item" id="product-detail" data-bs-toggle="modal"
+                                    <a class="dropdown-item product-detail"  data-bs-toggle="modal"
                                        href="javascript:void(0);"
                                        data-bs-target="#modalAddProduct" th:value="${product.id}"><i
                                             class='bx bx-add-to-queue'></i>Tạo sản phẩm</a>
