oanh sửa code xuất file excel hóa đơn

--- a/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/evaluate/evaluate.html
@@ -52,7 +52,7 @@
                     <td th:text="${evaluate.customer.name!= null ?evaluate.customer.name:'Trống' }"></td>
                     <td th:text="${evaluate.dateCreate}"></td>
                     <td th:text="${evaluate.point}"></td>
-                    <td th:text="|${evaluate.comment} phạm đức oanh đã bình luận|"></td>
+                    <td th:text="|${evaluate.comment}|"></td>
                     <td>
                         <div class="form-check form-switch mb-2">
                             <input class="form-check-input active" type="checkbox" th:value="${evaluate.id}"
