update return bill

--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -79,7 +79,7 @@
                                                     <thead>
                                                     <tr>
                                                         <th>
-                                                            <input type="checkbox">
+                                                            <input type="checkbox"  th:id="|checkboxAll${session.bill.id}|">
                                                         </th>
                                                         <th>Tên sản phẩm</th>
                                                         <th>Số lượng</th>
