edit manana return

--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/agree_bill_return.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/agree_bill_return.html
@@ -28,7 +28,7 @@
     </ul>
     <div class="tab-content">
         <div class="tab-pane show active" id="navs-pills-top-home">
-            <h5 class="mb-4">Hóa Đơn Yêu Cầu Hoàn Trả</h5>
+            <h5 class="mb-4">Hóa Đơn Đồng Ý Hoàn Trả</h5>
             <div class="table-responsive text-nowrap">
                 <table class="table card-table text-center">
                     <thead>
